Update CRDs for Permissive mTLS (#2100)
* Add mutualTLSMode to service-defaults and proxy-defaults
* Add allowEnablingPermisiveMutualTLS to mesh config entry

--- a/charts/consul/templates/crd-meshes.yaml
+++ b/charts/consul/templates/crd-meshes.yaml
@@ -55,6 +55,11 @@ spec:
           spec:
             description: MeshSpec defines the desired state of Mesh.
             properties:
+              allowEnablingPermissiveMutualTLS:
+                description: AllowEnablingPermissiveMutualTLS must be true in order
+                  to allow setting MutualTLSMode=permissive in either service-defaults
+                  or proxy-defaults.
+                type: boolean
               http:
                 description: HTTP defines the HTTP configuration for the service mesh.
                 properties:
