--- a/charts/consul/templates/crd-gatewayclasses.yaml
+++ b/charts/consul/templates/crd-gatewayclasses.yaml
@@ -1,3 +1,5 @@
+# Copyright (c) HashiCorp, Inc.
+# SPDX-License-Identifier: MPL-2.0
 {{- if and .Values.connectInject.enabled .Values.connectInject.apiGateway.manageExternalCRDs }}
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -6,7 +8,6 @@ metadata:
     api-approved.kubernetes.io: https://github.com/kubernetes-sigs/gateway-api/pull/1538
     gateway.networking.k8s.io/bundle-version: v0.6.2
     gateway.networking.k8s.io/channel: experimental
-  creationTimestamp: null
   labels:
     app: {{ template "consul.name" . }}
     chart: {{ template "consul.chart" . }}
