--- a/charts/consul/templates/crd-serviceresolvers.yaml
+++ b/charts/consul/templates/crd-serviceresolvers.yaml
@@ -4,16 +4,15 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.10.0
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.12.0
   name: serviceresolvers.consul.hashicorp.com
+spec:
   labels:
     app: {{ template "consul.name" . }}
     chart: {{ template "consul.chart" . }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
     component: crd
-spec:
   group: consul.hashicorp.com
   names:
     kind: ServiceResolver
@@ -228,12 +227,13 @@ spec:
                     type: object
                 type: object
               prioritizeByLocality:
-                description: PrioritizeByLocality contains the configuration for
-                  locality aware routing.
+                description: PrioritizeByLocality controls whether the locality of
+                  services within the local partition will be used to prioritize connectivity.
                 properties:
                   mode:
-                    description: Mode specifies the behavior of PrioritizeByLocality
-                      routing. Valid values are "", "none", and "failover".
+                    description: 'Mode specifies the type of prioritization that will
+                      be performed when selecting nodes in the local partition. Valid
+                      values are: "" (default "none"), "none", and "failover".'
                     type: string
                 type: object
               redirect:
@@ -275,6 +275,10 @@ spec:
                       If empty the default subset is used.
                     type: string
                 type: object
+              requestTimeout:
+                description: RequestTimeout is the timeout for receiving an HTTP response
+                  from this service before the connection is terminated.
+                type: string
               subsets:
                 additionalProperties:
                   properties:
