--- a/charts/consul/templates/crd-tcproutes.yaml
+++ b/charts/consul/templates/crd-tcproutes.yaml
@@ -1,4 +1,7 @@
 {{- if and .Values.connectInject.enabled .Values.connectInject.apiGateway.manageExternalCRDs }}
+# Copyright (c) HashiCorp, Inc.
+# SPDX-License-Identifier: MPL-2.0
+
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
