--- a/control-plane/config/crd/bases/consul.hashicorp.com_serviceresolvers.yaml
+++ b/control-plane/config/crd/bases/consul.hashicorp.com_serviceresolvers.yaml
@@ -6,8 +6,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.10.0
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.12.0
   name: serviceresolvers.consul.hashicorp.com
 spec:
   group: consul.hashicorp.com
@@ -224,12 +223,13 @@ spec:
                     type: object
                 type: object
               prioritizeByLocality:
-                description: PrioritizeByLocality contains the configuration for
-                  locality aware routing.
+                description: PrioritizeByLocality controls whether the locality of
+                  services within the local partition will be used to prioritize connectivity.
                 properties:
                   mode:
-                    description: Mode specifies the behavior of PrioritizeByLocality
-                      routing. Valid values are "", "none", and "failover".
+                    description: 'Mode specifies the type of prioritization that will
+                      be performed when selecting nodes in the local partition. Valid
+                      values are: "" (default "none"), "none", and "failover".'
                     type: string
                 type: object
               redirect:
@@ -271,6 +271,10 @@ spec:
                       If empty the default subset is used.
                     type: string
                 type: object
+              requestTimeout:
+                description: RequestTimeout is the timeout for receiving an HTTP response
+                  from this service before the connection is terminated.
+                type: string
               subsets:
                 additionalProperties:
                   properties:
