--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -2201,6 +2201,11 @@ connectInject:
         maxInstances: 1
         minInstances: 1
 
+      # The name of the OpenShift SecurityContextConstraints resource to use for Gateways.
+      # Only applicable if `global.openshift.enabled` is true.
+      # @type: string
+      openshiftSCCName: "restricted-v2"
+
     # Configuration for the ServiceAccount created for the api-gateway component
     serviceAccount:
       # This value defines additional annotations for the client service account. This should be formatted as a multi-line
