--- a/acceptance/tests/fixtures/cases/sameness/exported-services/ap1-partition/kustomization.yaml
+++ b/acceptance/tests/fixtures/cases/sameness/exported-services/ap1-partition/kustomization.yaml
@@ -1,8 +1,9 @@
 # Copyright (c) HashiCorp, Inc.
 # SPDX-License-Identifier: MPL-2.0
 
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 resources:
-  - ../../../../bases/sameness/exportedservices-ap1
-
-patchesStrategicMerge:
-- patch.yaml
+- ../../../../bases/sameness/exportedservices-ap1
+patches:
+- path: patch.yaml
